[project]
name = "treedb"
authors = [{ name = "Sebastian Bank", email = "sebastian.bank@uni-leipzig.de" }]
description = "Glottolog languoid tree as SQLite database"
keywords = ["glottolog", "languoids", "sqlite3", "database"]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE.txt"]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
  "csv23~=0.3",
  "pycountry==24.6.1",  # date-based versioning scheme
  "sqlalchemy>=1.4.24",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/glottolog/treedb"
Changelog = "https://github.com/glottolog/treedb/blob/master/CHANGES.rst"
"Issue Tracker" = "https://github.com/glottolog/treedb/issues"
CI = "https://github.com/glottolog/treedb/actions"
Coverage = "https://codecov.io/gh/glottolog/treedb"

[project.optional-dependencies]
pretty = ["sqlparse>=0.3"]
pandas = ["pandas>=1"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.dynamic]
version = {attr = "treedb.__version__"}

[dependency-groups]
dev = [  # $ pip install -e .[pretty,pandas] --group dev
  "build", "tox", "twine", "wheel",
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "typing" },
]
lint = ["flake8", "Flake8-pyproject", "pep8-naming"]
test = ["coverage", "pytest>=9", "pytest-cov"]
typing = ["mypy"]

[tool.mypy]
packages = ["treedb"]

[tool.flake8]
exclude = [".tox", "build"]
ignore = ["E126", "E128", "W503"]
max-line-length = 110

[tool.pytest]
minversion = "9"
testpaths = ["treedb", "tests"]
addopts = [
  "--doctest-modules",
  # pytest summary: all except (E)rror
  # - (f)ailed
  # - (s)kipped
  # - (x/X)failed/passed
  # - (p/P)assed (no output)
  "-r fsxXpP",
  "--durations=10",
  "--cov", "--cov-report=term", "--cov-report=html",
]
strict_config = true
strict_markers = true
filterwarnings = [
  "ignore::DeprecationWarning:pycountry.*",
  'ignore:.*pkg_resources.declare_namespace\(.*:DeprecationWarning',
]
log_cli_level = "WARNING"
#log_file = "test-log.txt"
#log_file_level = "DEBUG"

[tool.coverage.run]
source = ["treedb"]
branch = false

[tool.tox]
requires = ["tox>=4.22"]
env_list = ["3.14", "3.13", "3.12", "3.11", "3.10"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
dependency_groups = ["test"]
extras = ["pretty"]
commands = [["python", "-X", "dev", "run-tests.py", { replace = "posargs", extend = true }]]
