[metadata]
license_file = LICENSE.txt

[sdist]
formats = zip

[tool:pytest]
minversion = 5.2
testpaths =
  treedb
  tests
addopts =
  --strict-config --strict-markers
  --doctest-modules
  # pytest summary: all except (E)rror
  # - (p/P)assed (no output)
  # - (s)kipped
  # - (x/X)failed/passed
  # - (f)ailed
  -r pPsxXf
  --durations=10
  --cov --cov-report=term --cov-report=html

[coverage:run]
source = treedb
branch = false

[flake8]
ignore = E126,E128
max-line-length = 110

#log_cli_level = INFO
#log_cli_format = [%(levelname)s@%(name)s] %(message)s

#log_file = pytest.log
#log_file_level = DEBUG
#log_file_format = %(asctime)s [%(levelname)s@%(name)s.%(funcName)s()] %(message)s
#log_file_date_format = %b %d %H:%M:%S
