[metadata]
license_file = LICENSE.txt

[sdist]
formats = zip

[tool:pytest]
minversion = 6
testpaths =
  treedb
  tests
addopts =
  --doctest-modules
  # pytest summary: all except (E)rror
  # - (f)ailed
  # - (s)kipped
  # - (x/X)failed/passed
  # - (p/P)assed (no output)
  -r fsxXpP
  --durations=10
  --cov --cov-report=term --cov-report=html
  --strict-config --strict-markers
log_cli_level = WARNING
log_cli_format = [%(levelname)s@%(name)s] %(message)s
#log_file = test-log.txt
#log_file_level = DEBUG
#log_file_format = %(asctime)s [%(levelname)s@%(name)s.%(funcName)s()] %(message)s
#log_file_date_format = %b %d %H:%M:%S

[coverage:run]
source = treedb
branch = false

[flake8]
ignore = E126,E128
max-line-length = 110
