[metadata]
license_files = LICENSE.txt

[sdist]
formats = zip

[tool:pytest]
minversion = 6
testpaths =
  treedb
  tests
addopts =
  --doctest-modules
  # pytest summary: all except (E)rror
  # - (f)ailed
  # - (s)kipped
  # - (x/X)failed/passed
  # - (p/P)assed (no output)
  -r fsxXpP
  --durations=10
  --cov --cov-report=term --cov-report=html
  --strict-config --strict-markers
log_cli_level = WARNING
#log_file = test-log.txt
#log_file_level = DEBUG

[coverage:run]
source = treedb
branch = false

[flake8]
ignore = E126,E128,W503
max-line-length = 110
